--- a/index.html
+++ b/index.html
@@ -38,9 +38,18 @@
         take center stage.</h2>
         <p  class="lead hide-on-small">myTunes is the best way to organize and enjoy the music, movies, and TV shows you already have — and shop for the ones you want. Enjoy all the entertainment myTunes has to offer on your Mac and PC.
 
-</p>
+       </p>
       </div>
 	</div>
+	
+	<section id="music" class="section">
+		<div id="container">
+			<h2 class="section-head">
+				<i class="fas fa-music"></i> Music
+			</h2>
+		</div>
+	</section>
+
 
 
 
