--- a/index.html
+++ b/index.html
@@ -49,16 +49,25 @@
 			</h2>
 		</div>
 	</section>
+	
+	<section id="video" class="section bg-light">
+		<div class="container">
+			<h3>All your favorite movies are just a tap away.</h3>
+			<p class="lead">Whatever you feel like watching — a Hollywood blockbuster, or a documentary — myTunes keeps your entire collection of movies organized and ready to play. So you can easily browse your library for something great to watch. Or find something entirely new on the myTunes Store</p>
+			<a href="#" class="btn btn-secondary mb mt">Learn moer ></a>
+			<img src="videomock.png">
+		</div>
+	</section>
+
+	<section id="entertainment" class="section">
+		<div class="container">
+			<h3>Turn wherever you are into your very own screening room.</h3>
+			<p class="lead">Tunes makes it easy to lose yourself in a movie, whether you’re relaxing at home or out in the world. Just download your favorite movies and you have something great to watch while you’re commuting to work, traveling, or just standing in line somewhere. </p>
+		</div>
+	</section>
 
 
-
-
-
-
-
-
-
-	<script
+        <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
