--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
 			<h2 class="section-head">
 				<i class="fas fa-music"></i> Music
 			</h2>
+			<h3>50 million songs. Zero ads.</h3>
+			<p class="lead">Stream over 50 million songs, ad-free. Or download albums and tracks to listen to offline. All the music in your personal myTunes library — no matter where it came from — lives right alongside the Berry Music catalog. Start your free three-month trial with no commitment, and cancel anytime.</p>
+			<a href="#" class="btn btn-primary mb">Start Free Trial Now!</a>
+			<p class="text-light">Berry Music is available in myTunes, and for iOS and Android devices.</p>
+			<img src="mock1.png">
 		</div>
 	</section>
 	
