--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</div>
 	
 	<section id="music" class="section">
-		<div id="container">
+		<div class="container">
 			<h2 class="section-head">
 				<i class="fas fa-music"></i> Music
 			</h2>
