--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="container">
 			<h3>All your favorite movies are just a tap away.</h3>
 			<p class="lead">Whatever you feel like watching — a Hollywood blockbuster, or a documentary — myTunes keeps your entire collection of movies organized and ready to play. So you can easily browse your library for something great to watch. Or find something entirely new on the myTunes Store</p>
-			<a href="#" class="btn btn-secondary mb mt">Learn moer ></a>
+			<a href="#" class="btn btn-secondary mb mt">Learn more ></a>
 			<img src="videomock.png">
 		</div>
 	</section>
