--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	  	  	  <a href="#showcase">myTunes</a>
 	  	  	</li>
 	  	    <li>
-	  	      <a href='#showcae'>Overview</a>
+	  	      <a href='#showcase'>Overview</a>
 	  	    </li>
 	  	    <li>
 	  	      <a href='#music'>Music</a>
@@ -32,16 +32,16 @@
 	  	  <a href='#' id='openup'>myTunes </a>
 	  	</nav>
       </header>
+
       <div class="main-section container">
       	<h1>myTunes.</h1>
       	<h2>Your music and movies 
         take center stage.</h2>
         <p  class="lead hide-on-small">myTunes is the best way to organize and enjoy the music, movies, and TV shows you already have — and shop for the ones you want. Enjoy all the entertainment myTunes has to offer on your Mac and PC.
-
-       </p>
+        </p>
       </div>
 	</div>
-	
+
 	<section id="music" class="section">
 		<div class="container">
 			<h2 class="section-head">
@@ -54,12 +54,12 @@
 			<img src="mock1.png">
 		</div>
 	</section>
-	
+
 	<section id="video" class="section bg-light">
 		<div class="container">
 			<h3>All your favorite movies are just a tap away.</h3>
 			<p class="lead">Whatever you feel like watching — a Hollywood blockbuster, or a documentary — myTunes keeps your entire collection of movies organized and ready to play. So you can easily browse your library for something great to watch. Or find something entirely new on the myTunes Store</p>
-			<a href="#" class="btn btn-secondary mb mt">Learn more ></a>
+			<a href="#" class="btn btn-secondary mb mt">Learn more <i class="fas fa-chevron-right"></i></a>
 			<img src="videomock.png">
 		</div>
 	</section>
@@ -71,8 +71,109 @@
 		</div>
 	</section>
 
+	<section id="gift-cards" class="section bg-light">
+		<div class="container">
+			<div class="gift-cards">
+			<div>
+				<img src="giftcard.jpg">
+			</div>
+			<div>
+				<h3>Family Sharing. 
+                Share your favorites with your favorites.</h3>
+                <p class="lead">Family Sharing makes it easy for up to six people in your family to share each other’s iTunes purchases. Whenever one person buys a new movie, everybody in your family can download and enjoy it. Families can share songs and albums too. And for kids under 13, or any other family members you choose, you can turn on Ask to Buy, which requires parental permission before purchasing</p>
+                <p>Already have a Berry myTune Gift Card?</p>
+                <hr>
+                <a href="#" class="text-secondary"><i class="fas fa-chevron-right"></i> Redeem!</a>
+			</div>
+		</div>
+		</div>
+	</section>
 
-        <script
+
+
+	<footer>
+		<div class="container">
+			<div class="footer-cols">
+				<ul>
+					<li>Shop & Learn</li>
+					<li>
+						<a href="#">Music</a>
+					</li>
+					<li>
+						<a href="#">Movies</a>
+					</li>
+					<li>
+						<a href="#">Shows</a>
+					</li>
+					<li>
+						<a href="#">Apps</a>
+					</li>
+					<li>
+						<a href="#">Gift-Cards</a>
+					</li>
+				</ul>
+				<ul>
+					<li>Berry Store</li>
+					<li>
+						<a href="#">Find a Store</a>
+					</li>
+					<li>
+						<a href="#">Today at Breey</a>
+					</li>
+					<li>
+						<a href="#">Financing</a>
+					</li>
+					<li>
+						<a href="#">Order Status</a>
+					</li>
+					<li>
+						<a href="#">Berry Camp</a>
+					</li>
+				</ul>
+				<ul>
+					<li>Education & Business</li>
+					<li>
+						<a href="#">Berry & Education</a>
+					</li>
+					<li>
+						<a href="#">Shop for College</a>
+					</li>
+					<li>
+						<a href="#">Berry & Business</a>
+					</li>
+					<li>
+						<a href="#">Shop for Business</a>
+					</li>
+					<li>
+						<a href="#">Jobs</a>
+					</li>
+				</ul>
+				<ul>
+					<li>About Berry</li>
+					<li>
+						<a href="#">Newsroom</a>
+					</li>
+					<li>
+						<a href="#">Berry Leadership</a>
+					</li>
+					<li>
+						<a href="#">Investors</a>
+					</li>
+					<li>
+						<a href="#">Events</a>
+					</li>
+					<li>
+						<a href="#">Contact Berry</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="footer-bottom text-center">
+			Copyright &copy; 2018 Berry myTunes
+		</div>
+	</footer>
+
+    <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
